syntax = "proto3";

package user;

service UserService {
  rpc FindAll (FindAllRequest) returns (UserListResponse);
  rpc FindOne (FindOneRequest) returns (UserResponse);
  rpc Update (UpdateRequest) returns (UserResponse);
  rpc Delete (DeleteRequest) returns (Empty);
  rpc Create (CreateRequest) returns (UserResponse);
  rpc AdminResetPassword (AdminResetPasswordRequest) returns (AuthResponse);
  rpc ChangeRole (ChangeRoleRequest) returns (UserResponse);
}

enum Role {
  GLOBAL_ADMIN = 0;
  ADMIN_USER = 1;
  STANDARD_USER = 2;
}

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  Role role = 4;
  repeated string permissions = 5;
  string createdAt = 6;
  bool isValidated = 7;
}

message Requester {
  int32 id = 1;
  Role role = 2;
}

message FindAllRequest {
  Requester requester = 1;
}

message UserListResponse {
  repeated User users = 1;
}

message FindOneRequest {
  int32 id = 1;
  Requester requester = 2;
}

message UpdateUserDto {
  string email = 1;
  string username = 2;
  repeated string permissions = 3;
  string password = 4;
}

message UpdateRequest {
  int32 id = 1;
  UpdateUserDto dto = 2;
  Requester requester = 3;
}

message DeleteRequest {
  int32 id = 1;
  Requester requester = 2;
}

message CreateUserDto {
  string email = 1;
  string username = 2;
  string password = 3;
  Role role = 4;
}

message CreateRequest {
  CreateUserDto dto = 1;
  Requester requester = 2;
}

message AdminResetPasswordDto {
  string newPassword = 1;
}

message AdminResetPasswordRequest {
  int32 id = 1;
  AdminResetPasswordDto dto = 2;
  Requester requester = 3;
}

message ChangeRoleDto {
  Role role = 1;
}

message ChangeRoleRequest {
  int32 id = 1;
  ChangeRoleDto dto = 2;
  Requester requester = 3;
}

message UserResponse {
  User user = 1;
}

message AuthResponse {
  string message = 1;
}

message Empty {}
